@@ -36,6 +36,10 @@ HREF="mod/mod_actions.html#action">Action</A> directive. The built-in
 handlers in the standard distribution are as follows:</P>
 
 <UL>
+<LI><STRONG>default-handler</STRONG>:
+    Send the file using the <CODE>default_handler()</CODE>, which is the 
+    handler used by default to handle static content.
+    (core)
 <LI><STRONG>send-as-is</STRONG>:
     Send file with HTTP headers as is.
     (<A HREF="mod/mod_asis.html">mod_asis</A>)
